# robonomics_comm

./: .travis.yml  Makefile  README.md  default.nix  fetchNixpkgs.nix  objective.py  release.nix  tests.nix
aira_graph/: CMakeLists.txt  package.xml  setup.py
aira_graph/launch/: aira_graph.launch
aira_graph/scripts/: aira_graph_node
aira_graph/src/aira_graph/: aira_graph.py  nodes.py
docker/: cliquebait-testing-network.yaml
ethereum_common/: CMakeLists.txt  package.xml  setup.py
ethereum_common/launch/: erc20.launch  signer.launch
ethereum_common/msg/: Address.msg  ApprovalEvent.msg  TransferEvent.msg  TxHash.msg  UInt256.msg  _UInt256.py.patch
ethereum_common/scripts/: erc20_node  eth_node  signer_node
ethereum_common/src/ethereum_common/: ERC20.py  erc20_services.py  eth_keyfile_helper.py  eth_parity_utils.py  eth_services.py  eth_utils.py  nodes.py  signer.py  type_converters.py
ethereum_common/srv/: AccountBalance.srv  AccountToAddressAllowance.srv  Accounts.srv  Allowance.srv  Approve.srv  Balance.srv  Transfer.srv  TransferFrom.srv
ipfs_common/: CMakeLists.txt  package.xml  setup.py
ipfs_common/launch/: ipfs_channel.launch
ipfs_common/msg/: Filepath.msg
ipfs_common/scripts/: ipfs_channel_node  ipfs_common_node
ipfs_common/src/ipfs_common/: bag.py  ipfs_channel.py  ipfs_common.py  ipfs_fileutils.py  ipfs_rosbag.py  nodes.py  pubsub.py
ipfs_common/srv/: IpfsDownloadFile.srv  IpfsUploadFile.srv
nix/: control.nix  default.nix  ethereum_common.nix  ipfs_common.nix  liability.nix  lib.nix  lighthouse.nix  msgs.nix
robonomics_comm/: CMakeLists.txt  package.xml
robonomics_control/: CMakeLists.txt  package.xml  setup.py
robonomics_control/abi/: investors.json
robonomics_control/launch/: control.launch
robonomics_control/models/: plant.json
robonomics_control/scripts/: distribution_node
robonomics_control/src/robonomics_control/: distribution.py  nodes.py
robonomics_liability/: CMakeLists.txt  package.xml  setup.py
robonomics_liability/abi/: factory.json  liability.json
robonomics_liability/launch/: liability.launch
robonomics_liability/msg/: Liability.msg  LiabilityExecutionTimestamp.msg
robonomics_liability/scripts/: executor_node  listener_node  persistence_node  player_service_node
robonomics_liability/src/robonomics_liability/: LiabilityExecutionThread.py  LiabilityExecutionsPersistence.py  executor.py  finalization_checker.py  listener.py  nodes.py  player.py  player_service.py  recorder.py
robonomics_liability/src/robonomics_liability/test/: test_executor.py  test_player.py  test_recorder.py
robonomics_liability/srv/: CreateRosbagPlayer.srv  FinishLiability.srv  PersistenceContainsLiability.srv  PersistenceLiabilityTimestamp.srv  ReadLiability.srv  SetLiabilityResult.srv  StartLiability.srv  StartRosbagPlayer.srv  StopRosbagPlayer.srv
robonomics_liability/tests/: liability.test  testMessages.py  test_ethereum_common_messages.py  test_executor.py  test_infochan.py  test_messageValidator.py  test_player.py  test_recorder.py  test_signer.py
robonomics_lighthouse/: CMakeLists.txt  package.xml  setup.py
robonomics_lighthouse/abi/: factory.json  liability.json  lighthouse.json
robonomics_lighthouse/launch/: infochan.launch  lighthouse.launch
robonomics_lighthouse/msg/: Ask.msg  Bid.msg  Deal.msg  Result.msg
robonomics_lighthouse/scripts/: generator_node  infochan_node  lighthouse_node  matcher_node  reporter_node  signer_node
robonomics_lighthouse/src/robonomics_lighthouse/: generator.py  infochan.py  lighthouse.py  matcher.py  messageValidator.py  nodes.py  pubsub.py  quota.py  reporter.py  signer.py
robonomics_lighthouse/src/robonomics_lighthouse/test/: testMessages.py  test_infochan.py  test_messageValidator.py  test_signer.py
robonomics_lighthouse/srv/: AsksGenerator.srv
robonomics_lighthouse/tests/: lighthouse.test
robonomics_market/: CMakeLists.txt  package.xml  setup.py
robonomics_market/abi/: builder.json  security.json
robonomics_market/launch/: market.launch  market2.launch  matcher.launch
robonomics_market/models/: simple.json
robonomics_market/msg/: Ask.msg  Bid.msg
robonomics_market/scripts/: distribution_node  generator_node  market_node  matcher_node  signer_node
robonomics_market/src/robonomics_market/: distribution.py  generator.py  market.py  matcher.py  nodes.py  pubsub.py  signer.py
robonomics_market/srv/: AsksGenerator.srv  BidsGenerator.srv
robonomics_msgs/: CMakeLists.txt  package.xml  setup.py
robonomics_msgs/msg/: AddedOrderFeedback.msg  AddedPendingTransactionFeedback.msg  Demand.msg  Multihash.msg  Offer.msg  Result.msg
robonomics_msgs/src/robonomics_msgs/: messageValidator.py  robonomicsMessageUtils.py
tests/robonomics_lighthouse/: test_infochan.py  test_messageValidator.py  test_signer.py
