<?xml version="1.0"?>
<package format="2">
  <name>robonomics_comm</name>
  <version>1.1.0</version>
  <description>The Robonomics communication stack</description>
  <maintainer email="mail@akru.me">Alexander Krupenkin</maintainer>
  <license>BSD3</license>
  <url type="repository">https://github.com/airalab/robonomics_comm</url>
  <author email="mail@akru.me">Alexander Krupenkin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>
