<?xml version="1.0"?>
<package>
  <name>robonomics_lighthouse</name>
  <version>0.5.0</version>
  <description>The robonomics lighthouse nodes</description>
  <maintainer email="mail@akru.me">Alexander Krupenkin</maintainer>
  <license>BSD3</license>
  <author email="mail@akru.me">Alexander Krupenkin</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pexpect</run_depend>
  <run_depend>ethereum_common</run_depend>
</package>
